WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127437
[wk2] Scroll pinning state is wrong until the first scroll event
https://bugs.webkit.org/show_bug.cgi?id=127437
Summary
[wk2] Scroll pinning state is wrong until the first scroll event
Tim Horton
Reported
2014-01-22 11:42:00 PST
We don't update the WebPage(Proxy)'s scroll pinning state until the first scroll event, so we don't know if we're pinned in the very first scroll gesture.
Attachments
patch
(2.95 KB, patch)
2014-01-22 11:43 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-01-22 11:43:12 PST
Created
attachment 221885
[details]
patch
Tim Horton
Comment 2
2014-01-22 12:15:44 PST
http://trac.webkit.org/changeset/162548
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug